--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@ h1{
 
 .project{
   min-width:520px;
-  scroll-snap-align:start;
 }
 
 .project h2{
@@ -210,10 +209,8 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. Disfruto de todo el proceso de diseño desde la fase
-        del análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico y adaptable,
+        con interés por todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -231,27 +228,37 @@ h1{
         <div class="project">
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
-          <p>
-            Sistema modular de mobiliario orientado a la adaptabilidad espacial y a la optimización
-            de procesos productivos.
-          </p>
+          <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </div>
 
         <div class="project">
           <h2>Sixay · Cómoda personalizada</h2>
           <span>Diseño de mobiliario</span>
-          <p>
-            Desarrollo completo de una cómoda a medida, desde el análisis del usuario hasta la
-            fabricación.
-          </p>
+          <p>Desarrollo completo de una cómoda a medida, del análisis a la fabricación.</p>
         </div>
 
         <div class="project">
           <h2>Proyecto experimental</h2>
           <span>Exploración formal</span>
-          <p>
-            Investigación sobre materialidad, proporción y lenguaje formal aplicada a objeto cotidiano.
-          </p>
+          <p>Investigación sobre materialidad, proporción y lenguaje formal.</p>
+        </div>
+
+        <div class="project">
+          <h2>NODE · Sistema modular</h2>
+          <span>Investigación tipológica</span>
+          <p>Profundización en sistemas constructivos y modularidad aplicada.</p>
+        </div>
+
+        <div class="project">
+          <h2>Luminaria experimental</h2>
+          <span>Diseño de producto</span>
+          <p>Exploración de luz, estructura y ensamblaje en objeto funcional.</p>
+        </div>
+
+        <div class="project">
+          <h2>Objeto técnico</h2>
+          <span>Electricidad / prototipo</span>
+          <p>Desarrollo de un objeto funcional con base técnica y enfoque práctico.</p>
         </div>
 
       </div>
