--- a/index.html
+++ b/index.html
@@ -98,17 +98,6 @@ h1{
   line-height:1.05;
 }
 
-/* ========= TEXT ========= */
-.section-block p{
-  margin-top:8px;
-  padding-left:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:600px;
-  line-height:1.6;
-  text-align:justify;
-}
-
 /* ========= ABOUT ========= */
 .about{
   display:flex;
@@ -142,8 +131,21 @@ h1{
   transition:transform .8s ease;
 }
 
+/* Proyecto clicable */
 .project{
   min-width:520px;
+}
+
+.project a{
+  display:block;
+  text-decoration:none;
+  color:inherit;
+  transition:opacity .3s ease, transform .3s ease;
+}
+
+.project a:hover{
+  opacity:.85;
+  transform:translateX(2px);
 }
 
 .project h2{
@@ -164,6 +166,8 @@ h1{
 .project p{
   margin-top:12px;
   max-width:520px;
+  font-size:15px;
+  color:#aaa;
 }
 
 /* ========= FOOTER ========= */
@@ -226,39 +230,51 @@ h1{
       <div class="carousel-track" id="carouselTrack">
 
         <div class="project">
-          <h2>NODE</h2>
-          <span>Proyecto final de grado</span>
-          <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
+          <a href="node.html">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+            <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
+          </a>
         </div>
 
         <div class="project">
-          <h2>Sixay · Cómoda personalizada</h2>
-          <span>Diseño de mobiliario</span>
-          <p>Desarrollo completo de una cómoda a medida, del análisis a la fabricación.</p>
+          <a href="sixay.html">
+            <h2>Sixay · Cómoda personalizada</h2>
+            <span>Diseño de mobiliario</span>
+            <p>Desarrollo completo de una cómoda a medida, del análisis a la fabricación.</p>
+          </a>
         </div>
 
         <div class="project">
-          <h2>Proyecto experimental</h2>
-          <span>Exploración formal</span>
-          <p>Investigación sobre materialidad, proporción y lenguaje formal.</p>
+          <a href="experimental.html">
+            <h2>Proyecto experimental</h2>
+            <span>Exploración formal</span>
+            <p>Investigación sobre materialidad, proporción y lenguaje formal.</p>
+          </a>
         </div>
 
         <div class="project">
-          <h2>NODE · Sistema modular</h2>
-          <span>Investigación tipológica</span>
-          <p>Profundización en sistemas constructivos y modularidad aplicada.</p>
+          <a href="node-sistema.html">
+            <h2>NODE · Sistema modular</h2>
+            <span>Investigación tipológica</span>
+            <p>Profundización en sistemas constructivos y modularidad aplicada.</p>
+          </a>
         </div>
 
         <div class="project">
-          <h2>Luminaria experimental</h2>
-          <span>Diseño de producto</span>
-          <p>Exploración de luz, estructura y ensamblaje en objeto funcional.</p>
+          <a href="luminaria.html">
+            <h2>Luminaria experimental</h2>
+            <span>Diseño de producto</span>
+            <p>Exploración de luz, estructura y ensamblaje en objeto funcional.</p>
+          </a>
         </div>
 
         <div class="project">
-          <h2>Objeto técnico</h2>
-          <span>Electricidad / prototipo</span>
-          <p>Desarrollo de un objeto funcional con base técnica y enfoque práctico.</p>
+          <a href="objeto-tecnico.html">
+            <h2>Objeto técnico</h2>
+            <span>Electricidad / prototipo</span>
+            <p>Desarrollo de un objeto funcional con base técnica y enfoque práctico.</p>
+          </a>
         </div>
 
       </div>
