--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ nav span{
 
         <div class="project">
           <a href="node.html">
-            <img src="img/node.jpg" alt="NODE">
+            <img src="img/brazo1.jpg" alt="NODE">
             <h2>NODE</h2>
             <span>Proyecto final de grado</span>
             <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
@@ -240,7 +240,7 @@ nav span{
 
         <div class="project">
           <a href="sixay.html">
-            <img src="img/sixay.jpg" alt="Sixay">
+            <img src="img/reloj1.jpg" alt="Sixay">
             <h2>Sixay · Cómoda personalizada</h2>
             <span>Diseño de mobiliario</span>
             <p>Desarrollo completo de una cómoda a medida, del análisis a la fabricación.</p>
@@ -249,7 +249,7 @@ nav span{
 
         <div class="project">
           <a href="experimental.html">
-            <img src="img/experimental.jpg" alt="Proyecto experimental">
+            <img src="img/lampara2.jpg" alt="Proyecto experimental">
             <h2>Proyecto experimental</h2>
             <span>Exploración formal</span>
             <p>Investigación sobre materialidad, proporción y lenguaje formal.</p>
@@ -258,7 +258,7 @@ nav span{
 
         <div class="project">
           <a href="luminaria.html">
-            <img src="img/luminaria.jpg" alt="Luminaria experimental">
+            <img src="img/lampara2.jpg" alt="Luminaria experimental">
             <h2>Luminaria experimental</h2>
             <span>Diseño de producto</span>
             <p>Exploración de luz, estructura y ensamblaje.</p>
@@ -267,7 +267,7 @@ nav span{
 
         <div class="project">
           <a href="objeto-tecnico.html">
-            <img src="img/objeto.jpg" alt="Objeto técnico">
+            <img src="img/secador2.jpg" alt="Objeto técnico">
             <h2>Objeto técnico</h2>
             <span>Electricidad / prototipo</span>
             <p>Objeto funcional con base técnica y enfoque práctico.</p>
