--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= HERO ========= */
+/* ========= HERO (NO TOCAR) ========= */
 .section.hero{
   align-items:center;
 }
@@ -109,7 +109,7 @@ h1{
   text-align:justify;
 }
 
-/* ========= ABOUT ========= */
+/* ========= ABOUT (NO TOCAR) ========= */
 .about{
   display:flex;
   align-items:flex-start;
@@ -130,22 +130,40 @@ h1{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
-.portfolio{
-  margin-top:24px;
+/* ========= PORTFOLIO (NUEVO) ========= */
+.portfolio-wrapper{
+  margin-top:32px;
+  overflow:hidden;
 }
 
-.project{
-  margin-top:48px;
+.portfolio-carousel{
+  display:flex;
+  gap:64px;
+  overflow-x:auto;
+  padding-bottom:16px;
+  scroll-behavior:smooth;
 }
 
-.project h2{
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#333;
+}
+
+.project-card{
+  min-width:420px;
+  flex-shrink:0;
+}
+
+.project-card h2{
   font-size:28px;
   font-weight:400;
   color:#f0f0f0;
 }
 
-.project span{
+.project-card span{
   display:block;
   margin-top:6px;
   font-size:12px;
@@ -154,8 +172,9 @@ h1{
   text-transform:uppercase;
 }
 
-.project p{
-  max-width:640px;
+.project-card p{
+  margin-top:12px;
+  max-width:360px;
 }
 
 /* ========= FOOTER ========= */
@@ -223,46 +242,57 @@ h1{
   <div class="section-block">
     <h1>Portfolio</h1>
 
-    <div class="portfolio">
+    <div class="portfolio-wrapper">
+      <div class="portfolio-carousel">
 
-      <div class="project">
-        <h2>NODE</h2>
-        <span>Proyecto final de grado</span>
-        <p>
-          Sistema modular de mobiliario orientado a la adaptabilidad espacial y a la optimización
-          de procesos productivos mediante soluciones constructivas racionalizadas.
-        </p>
+        <div class="project-card">
+          <h2>NODE</h2>
+          <span>Proyecto final de grado</span>
+          <p>
+            Sistema modular de mobiliario orientado a la adaptabilidad espacial
+            y a la racionalización productiva.
+          </p>
+        </div>
+
+        <div class="project-card">
+          <h2>Sixay · Cómoda</h2>
+          <span>Diseño de mobiliario</span>
+          <p>
+            Desarrollo completo de una cómoda a medida,
+            desde el análisis hasta la fabricación.
+          </p>
+        </div>
+
+        <div class="project-card">
+          <h2>Exploración material</h2>
+          <span>Proyecto experimental</span>
+          <p>
+            Investigación formal y constructiva aplicada
+            a un objeto de uso cotidiano.
+          </p>
+        </div>
+
       </div>
-
-      <div class="project">
-        <h2>Sixay · Cómoda personalizada</h2>
-        <span>Diseño de mobiliario · Prácticas</span>
-        <p>
-          Desarrollo completo de una cómoda a medida, desde el análisis del usuario y el contexto
-          hasta la definición técnica y la fabricación.
-        </p>
-      </div>
-
-      <div class="project">
-        <h2>Proyecto experimental</h2>
-        <span>Concepto / exploración formal</span>
-        <p>
-          Investigación sobre materialidad, proporción y lenguaje formal aplicada a un objeto de
-          uso cotidiano.
-        </p>
-      </div>
-
     </div>
   </div>
 </section>
 
 <script>
+/* NAV SCROLL */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
   btn.addEventListener("click",()=>{
     document.querySelectorAll(".section")[i]
       .scrollIntoView({behavior:"smooth"});
   });
 });
+
+/* SCROLL HORIZONTAL CON RUEDA */
+const carousel = document.querySelector(".portfolio-carousel");
+
+carousel.addEventListener("wheel",(e)=>{
+  e.preventDefault();
+  carousel.scrollLeft += e.deltaY;
+},{ passive:false });
 </script>
 
 </body>
