--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ h1{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO (NUEVO) ========= */
+/* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
   margin-top:32px;
   overflow:hidden;
@@ -153,10 +153,19 @@ h1{
 }
 
 .project-card{
-  min-width:420px;
+  min-width:440px;
   flex-shrink:0;
 }
 
+/* Placeholder imagen */
+.project-image{
+  width:100%;
+  height:240px;
+  background:#1a1a1a;
+  margin-bottom:16px;
+}
+
+/* Texto proyecto */
 .project-card h2{
   font-size:28px;
   font-weight:400;
@@ -246,6 +255,7 @@ h1{
       <div class="portfolio-carousel">
 
         <div class="project-card">
+          <div class="project-image"></div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>
@@ -255,6 +265,7 @@ h1{
         </div>
 
         <div class="project-card">
+          <div class="project-image"></div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>
@@ -264,6 +275,7 @@ h1{
         </div>
 
         <div class="project-card">
+          <div class="project-image"></div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>
@@ -286,9 +298,8 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
   });
 });
 
-/* SCROLL HORIZONTAL CON RUEDA */
+/* SCROLL HORIZONTAL */
 const carousel = document.querySelector(".portfolio-carousel");
-
 carousel.addEventListener("wheel",(e)=>{
   e.preventDefault();
   carousel.scrollLeft += e.deltaY;
