--- a/index.html
+++ b/index.html
@@ -157,12 +157,19 @@ h1{
   flex-shrink:0;
 }
 
-/* Placeholder imagen */
+/* Imagen proyecto */
 .project-image{
   width:100%;
   height:240px;
-  background:#1a1a1a;
   margin-bottom:16px;
+  overflow:hidden;
+}
+
+.project-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
 }
 
 /* Texto proyecto */
@@ -255,7 +262,9 @@ h1{
       <div class="portfolio-carousel">
 
         <div class="project-card">
-          <div class="project-image"></div>
+          <div class="project-image">
+            <img src="brazo1.jpg" alt="Proyecto NODE">
+          </div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>
@@ -265,7 +274,9 @@ h1{
         </div>
 
         <div class="project-card">
-          <div class="project-image"></div>
+          <div class="project-image">
+            <img src="reloj1.jpg" alt="Cómoda Sixay">
+          </div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>
@@ -275,7 +286,9 @@ h1{
         </div>
 
         <div class="project-card">
-          <div class="project-image"></div>
+          <div class="project-image">
+            <img src="secador2.jpg" alt="Exploración material">
+          </div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>
