--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ h1{
   width:100%;
   height:240px;
   margin-bottom:16px;
+  background:#1a1a1a;
   overflow:hidden;
 }
 
@@ -294,6 +295,17 @@ h1{
           <p>
             Investigación formal y constructiva aplicada
             a un objeto de uso cotidiano.
+          </p>
+        </div>
+
+        <!-- NUEVO PROYECTO -->
+        <div class="project-card">
+          <div class="project-image"></div>
+          <h2>Proyecto conceptual</h2>
+          <span>Diseño de producto</span>
+          <p>
+            Desarrollo de una propuesta conceptual centrada
+            en el análisis del uso y la lógica constructiva.
           </p>
         </div>
 
