--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ h1{
 .project-card{
   min-width:440px;
   flex-shrink:0;
+  transition:transform .35s ease;
 }
 
 /* Imagen proyecto */
@@ -171,6 +172,17 @@ h1{
   height:100%;
   object-fit:cover;
   display:block;
+  filter:grayscale(100%) contrast(1.05);
+  transition:filter .35s ease;
+}
+
+/* HOVER SUTIL */
+.project-card:hover{
+  transform:translateY(-4px);
+}
+
+.project-card:hover img{
+  filter:grayscale(0%) contrast(1.1);
 }
 
 /* Texto proyecto */
@@ -298,7 +310,6 @@ h1{
           </p>
         </div>
 
-        <!-- NUEVO PROYECTO -->
         <div class="project-card">
           <div class="project-image"></div>
           <h2>Proyecto conceptual</h2>
