--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ h1{
 .portfolio-wrapper{
   margin-top:32px;
   overflow:hidden;
+  padding-right:120px; /* ⬅ más margen derecho */
 }
 
 .portfolio-carousel{
@@ -152,7 +153,7 @@ h1{
   background:#333;
 }
 
-/* Proyecto como link */
+/* Proyecto */
 .project-card{
   min-width:440px;
   flex-shrink:0;
@@ -166,7 +167,7 @@ h1{
   transform:translateY(-4px);
 }
 
-/* Imagen proyecto */
+/* Imagen */
 .project-image{
   width:100%;
   height:240px;
@@ -188,7 +189,7 @@ h1{
   filter:grayscale(0%) contrast(1.1);
 }
 
-/* Texto proyecto */
+/* Texto */
 .project-card h2{
   font-size:28px;
   font-weight:400;
@@ -329,7 +330,6 @@ h1{
 </section>
 
 <script>
-/* NAV SCROLL */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
   btn.addEventListener("click",()=>{
     document.querySelectorAll(".section")[i]
@@ -337,7 +337,6 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
   });
 });
 
-/* SCROLL HORIZONTAL */
 const carousel = document.querySelector(".portfolio-carousel");
 carousel.addEventListener("wheel",(e)=>{
   e.preventDefault();
