--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h1{
 
 /* Proyecto */
 .project-card{
-  min-width:480px;           /* ⬅ un poco más ancho */
+  min-width:460px;          /* ⬅ un poco más pequeño */
   flex-shrink:0;
   text-decoration:none;
   color:inherit;
@@ -189,7 +189,7 @@ h1{
 /* Imagen */
 .project-image{
   width:100%;
-  height:280px;              /* ⬅ imagen más grande */
+  height:260px;             /* ⬅ imagen un poco más pequeña */
   margin-bottom:16px;
   background:#1a1a1a;
   overflow:hidden;
