--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h1{
 
 /* Proyecto */
 .project-card{
-  min-width:460px;          /* ⬅ un poco más pequeño */
+  min-width:460px;
   flex-shrink:0;
   text-decoration:none;
   color:inherit;
@@ -186,11 +186,11 @@ h1{
   transform:translateY(-4px);
 }
 
-/* Imagen */
+/* Imagen (más estrecha) */
 .project-image{
-  width:100%;
-  height:260px;             /* ⬅ imagen un poco más pequeña */
-  margin-bottom:16px;
+  width:92%;                 /* ⬅ más estrecha */
+  height:260px;
+  margin:0 auto 16px auto;   /* centrada */
   background:#1a1a1a;
   overflow:hidden;
 }
