--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h1{
 
 .portfolio-carousel{
   display:flex;
-  gap:64px;
+  gap:48px;                 /* ⬅ separación reducida */
   overflow-x:auto;
   padding-bottom:16px;
   scroll-behavior:smooth;
@@ -186,11 +186,11 @@ h1{
   transform:translateY(-4px);
 }
 
-/* Imagen (más estrecha) */
+/* Imagen */
 .project-image{
-  width:92%;                 /* ⬅ más estrecha */
+  width:92%;
   height:260px;
-  margin:0 auto 16px auto;   /* centrada */
+  margin:0 auto 16px auto;
   background:#1a1a1a;
   overflow:hidden;
 }
