--- a/index.html
+++ b/index.html
@@ -156,10 +156,32 @@ h1{
 
 .portfolio-carousel{
   display:flex;
-  gap:48px;                 /* ⬅ separación reducida */
+  gap:48px;
   overflow-x:auto;
-  padding-bottom:16px;
+  padding-bottom:20px;
   scroll-behavior:smooth;
+
+  /* Firefox */
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
+}
+
+/* Scrollbar WebKit (Chrome, Safari, Edge) */
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-track{
+  background:transparent;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background-color:#444;
+  border-radius:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb:hover{
+  background-color:#666;
 }
 
 /* Proyecto */
