--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ h1{
   filter:grayscale(0%) contrast(1.1);
 }
 
-/* Texto proyecto (desplazado a la derecha) */
+/* Texto proyecto alineado con imagen */
 .project-card h2,
 .project-card span{
-  padding-left:8px;          /* ⬅ ajuste solicitado */
+  padding-left:16px;   /* ⬅ alineado con borde de imagen */
 }
 
 .project-card h2{
