--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@ h1{
 
 /* Texto proyecto alineado con imagen */
 .project-card h2,
-.project-card span{
-  padding-left:16px;   /* ⬅ alineado con borde de imagen */
+.project-card span,
+.project-card p{
+  padding-left:16px;   /* ⬅ alineación total */
 }
 
 .project-card h2{
