--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
+  margin-left:-16px;          /* ⬅ arranque alineado con el título */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
@@ -225,11 +226,11 @@ h1{
   filter:grayscale(0%) contrast(1.1);
 }
 
-/* Texto proyecto alineado con imagen */
+/* Texto alineado con imagen */
 .project-card h2,
 .project-card span,
 .project-card p{
-  padding-left:16px;   /* ⬅ alineación total */
+  padding-left:16px;
 }
 
 .project-card h2{
