--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
-  margin-left:-16px;          /* ⬅ arranque alineado con el título */
+  margin-left:-12px; /* ⬅ micro-ajuste a la derecha */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
