--- a/index.html
+++ b/index.html
@@ -1,46 +1,358 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Luis Blasco — Industrial Design</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+<style>
+
+/* ========= RESET ========= */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Inter",sans-serif;
+}
+
+/* ========= BODY ========= */
+body{
+  background:#0a0a0a;
+  color:#f5f5f5;
+  overflow-y:scroll;
+  scroll-snap-type:y mandatory;
+}
+
+/* ========= NAV ========= */
+nav{
+  position:fixed;
+  top:0;
+  left:50%;
+  transform:translateX(-50%);
+  width:100%;
+  height:80px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:50px;
+  background:rgba(10,10,10,.4);
+  backdrop-filter:blur(12px);
+  z-index:100;
+}
+
+nav span{
+  font-size:11px;
+  letter-spacing:.3em;
+  text-transform:uppercase;
+  color:#bbb;
+  cursor:pointer;
+}
+
+/* ========= SECTIONS ========= */
+.section{
+  min-height:100vh;
+  scroll-snap-align:start;
+  display:flex;
+  justify-content:flex-start;
+  padding:180px 10vw 160px 22vw;
+}
+
+/* ========= SECTION BLOCK ========= */
+.section-block{
+  position:sticky;
+  top:260px;
+  max-width:1100px;
+}
+
+/* ========= HERO ========= */
+.section.hero{
+  align-items:center;
+}
+
+.section.hero h1{
+  font-size:clamp(80px,7vw,140px);
+  line-height:1.05;
+  margin-left:-4px;
+}
+
+.hero-surname{
+  white-space:nowrap;
+}
+
+.hero-sub{
+  margin-top:24px;
+  padding-left:8px;
+  font-size:14px;
+  letter-spacing:.25em;
+  color:#777;
+}
+
+/* ========= TYPO ========= */
+h1{
+  font-size:clamp(70px,6vw,120px);
+  font-weight:500;
+  line-height:1.05;
+}
+
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
+  font-size:15px;
+  color:#aaa;
+  max-width:600px;
+  line-height:1.6;
+  text-align:justify;
+}
+
+/* ========= ABOUT ========= */
+.about{
+  display:flex;
+  align-items:flex-start;
+  margin-top:12px;
+}
+
+.about p{
+  max-width:700px;
+}
+
+.about img{
+  width:300px;
+  height:400px;
+  margin-top:16px;
+  margin-left:40px;
+  object-fit:cover;
+  filter:grayscale(100%) contrast(1.05);
+  opacity:.9;
+}
+
+/* ========= PORTFOLIO ========= */
+.portfolio-wrapper{
+  position:relative;
+  margin-top:32px;
+  overflow:hidden;
+  padding-right:120px;
+}
+
+/* Gradiente derecho */
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
+}
+
+/* Carrusel */
+.portfolio-carousel{
+  display:flex;
+  gap:48px;
+  overflow-x:auto;
+  padding-bottom:20px;
+  scroll-behavior:smooth;
+  margin-left:-12px;
+
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
+}
+
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
+
+/* Flechas */
+.portfolio-arrow{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  background:none;
+  border:none;
+  color:#888;
+  font-size:48px;
+  cursor:pointer;
+  z-index:20;
+  transition:color .2s ease;
+}
+
+.portfolio-arrow:hover{
+  color:#fff;
+}
+
+.portfolio-arrow.left{
+  left:-48px;
+}
+
+.portfolio-arrow.right{
+  right:32px;
+}
+
+/* Proyecto */
+.project-card{
+  min-width:460px;
+  flex-shrink:0;
+  text-decoration:none;
+  color:inherit;
+  cursor:pointer;
+
+  opacity:0;
+  transform:translateY(12px);
+  transition:opacity .8s ease, transform .8s ease;
+}
+
+.project-card.is-visible{
+  opacity:1;
+  transform:translateY(0);
+}
+
+/* Imagen */
+.project-image{
+  width:92%;
+  height:260px;
+  margin:0 auto 16px auto;
+  background:#1a1a1a;
+  overflow:hidden;
+}
+
+.project-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  filter:grayscale(100%);
+  transition:filter .4s ease;
+}
+
+.project-card:hover img{
+  filter:grayscale(0%);
+}
+
+/* Texto proyecto alineado con imagen */
+.project-card h2,
+.project-card span,
+.project-card p{
+  padding-left:16px;
+}
+
+.project-card h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-card span{
+  display:block;
+  margin-top:6px;
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+.project-card p{
+  margin-top:12px;
+  max-width:360px;
+}
+
+/* ========= FOOTER ========= */
+.footer-wrapper{
+  display:flex;
+  justify-content:flex-start;
+  padding:40px 0 20px 22vw;
+  font-size:11px;
+  letter-spacing:.18em;
+  color:#cfcfcf;
+}
+
+</style>
+</head>
+<body>
+
+<nav>
+  <span data-i="0">Inicio</span>
+  <span data-i="1">Sobre mí</span>
+  <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
+</nav>
+
+<!-- HERO -->
+<section class="section hero">
+  <div class="section-block">
+    <h1>
+      Luis<br>
+      <span class="hero-surname">Blasco-Ibáñez</span><br>
+      Berbel
+    </h1>
+    <div class="hero-sub">Portfolio | Diseño industrial</div>
+  </div>
+</section>
+
+<!-- SOBRE MI -->
+<section class="section">
+  <div class="section-block">
+    <h1>Sobre mí</h1>
+    <div class="about">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+      </p>
+      <img src="foto.jpg" alt="Foto personal">
+    </div>
+  </div>
+</section>
+
 <!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-
-      <!-- Flecha izquierda -->
-      <button class="portfolio-arrow left" aria-label="Anterior">‹</button>
-
-      <!-- Flecha derecha -->
-      <button class="portfolio-arrow right" aria-label="Siguiente">›</button>
+      <button class="portfolio-arrow left">‹</button>
+      <button class="portfolio-arrow right">›</button>
 
       <div class="portfolio-carousel">
 
-        <a href="node.html" class="project-card">
-          <div class="project-image">
-            <img src="brazo1.jpg" alt="Proyecto NODE">
-          </div>
+        <a class="project-card" href="#">
+          <div class="project-image"><img src="brazo1.jpg"></div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </a>
 
-        <a href="sixay.html" class="project-card">
-          <div class="project-image">
-            <img src="reloj1.jpg" alt="Cómoda Sixay">
-          </div>
+        <a class="project-card" href="#">
+          <div class="project-image"><img src="reloj1.jpg"></div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
         </a>
 
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image">
-            <img src="secador2.jpg" alt="Exploración material">
-          </div>
+        <a class="project-card" href="#">
+          <div class="project-image"><img src="secador2.jpg"></div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
         </a>
 
-        <a href="conceptual.html" class="project-card">
+        <a class="project-card" href="#">
           <div class="project-image"></div>
           <h2>Proyecto conceptual</h2>
           <span>Diseño de producto</span>
@@ -51,3 +363,24 @@
     </div>
   </div>
 </section>
+
+<script>
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
+});
+
+const carousel=document.querySelector(".portfolio-carousel");
+document.querySelector(".portfolio-arrow.left").onclick=
+  ()=>carousel.scrollBy({left:-480,behavior:"smooth"});
+document.querySelector(".portfolio-arrow.right").onclick=
+  ()=>carousel.scrollBy({left:480,behavior:"smooth"});
+
+const observer=new IntersectionObserver(e=>{
+  e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"))
+},{root:carousel,threshold:.3});
+document.querySelectorAll(".project-card").forEach(c=>observer.observe(c));
+</script>
+
+</body>
+</html>
